--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <div class="subtitle_text subtitle_text_white">Закажите автомобиль, который подходит вам по стилю и бюджету</div>
         <div class="row">
             <div class="col-md-8 offset-md-2">
-                <div class="car_block"><img src="../src/img/car.png" alt=""></div>
+                <div class="car_block"><img src="../img/car.png" alt=""></div>
             </div>
         </div>
     </div>
